--- a/application/frontend/src/styles/MusicButton.css
+++ b/application/frontend/src/styles/MusicButton.css
@@ -58,6 +58,6 @@
 }
 
 .track-item button:hover {
-    background-color: #e9e9e9; /* Light grey background on hover */
+    background-color: none; /* Light grey background on hover */
 }
 
