--- a/application/frontend/src/styles/toDoList/CreateNewTask.css
+++ b/application/frontend/src/styles/toDoList/CreateNewTask.css
@@ -55,7 +55,7 @@
 }
 
 .modal-content h4 {
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     color: #f2bac9;
     margin-bottom: 25px;
@@ -63,6 +63,8 @@
     text-shadow: 0 1px 3px rgba(255, 255, 255, 0.8);
     position: relative;
     padding-bottom: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 .modal-content h4::after {
